--- a/.github/workflows/github-pipelines.yml
+++ b/.github/workflows/github-pipelines.yml
@@ -41,4 +41,4 @@ jobs:
         run: docker build . -t your-dockerhub-username/your-app:latest
 
       - name: Push Docker image
-        run: docker push your-dockerhub-username/your-app:latest
+        run: docker push your-dockerhub-username/msprapiclient:tagname
