--- a/.github/workflows/github-pipelines.yml
+++ b/.github/workflows/github-pipelines.yml
@@ -38,7 +38,7 @@ jobs:
         run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
 
       - name: Build Docker image
-        run: docker build . -t your-dockerhub-username/your-app:latest
+        run: docker build . -t fathallahma/msprapiclient:latest
 
       - name: Push Docker image
-        run: docker push your-dockerhub-username/msprapiclient:tagname
+        run: docker push fathallahma/msprapiclient:latest
