--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>21</java.version>
-		<sonar.projectKey>MSPR_Clients_API</sonar.projectKey>
+		<sonar.projectKey>mspr-kawa-2024_MSPR_Clients_API</sonar.projectKey>
 		<sonar.organization>mspr-kawa-2024</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
