--- a/.github/workflows/github-pipelines.yml
+++ b/.github/workflows/github-pipelines.yml
@@ -32,10 +32,13 @@ jobs:
       - name: Run integration tests
         run: mvn verify -Pintegration-test
 
+      - name: Generate coverage report
+        run: mvn jacoco:report
+
       - name: SonarCloud Scan
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn sonar:sonar -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} -Dsonar.organization=mspr-kawa-2024 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+        run: mvn sonar:sonar -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} -Dsonar.organization=mspr-kawa-2024 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 
       - name: Log in to Docker Hub
         env:
