--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://google/costumerapi?cloudSqlInstance=mspr-kawa-2024:europe-west1:dbcostumerapi&socketFactory=com-google.cloud.sql.mysql.SocketFactory
+spring.datasource.url=jdbc:mysql://google/costumerapi?cloudSqlInstance=mspr-kawa-2024:europe-west1:dbcostumerapi&socketFactory=com.google.cloud.sql.mysql.SocketFactory
 spring.jpa.properties.hibernate.default_schema=public
 spring.datasource.username=root
 spring.datasource.password=root
