--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
-spring.datasource.url=jdbc:mysql://google/costumerapi?cloudSqlInstance=mspr-kawa-2024:europe-west1:dbcostumerapi&socketFactory=com.google.cloud.sql.mysql.SocketFactory
-spring.jpa.properties.hibernate.default_schema=public
+# Database configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/clientApi
 spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
 
 # RabbitMQ configuration
-spring.rabbitmq.host=35.241.143.205
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
