--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/customer
+spring.datasource.url=jdbc:mysql://localhost:3306/clientApi
 spring.datasource.username=root
 spring.datasource.password=Amine3599
 spring.jpa.hibernate.ddl-auto=create-drop
