--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/clientApi
+spring.datasource.url=jdbc:mysql://34.79.125.134:3306/customerapi
 spring.datasource.username=root
-spring.datasource.password=Amine3599
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
